# hindsight-clients/go/model_knowledge_page_graph_response.go
@@ -3,7 +3,7 @@ Hindsight HTTP API
 
 HTTP API for Hindsight
 
-API version: 0.8.3
+API version: 0.8.4
 */
 
 // Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
@@ -19,12 +19,12 @@ import (
 // checks if the KnowledgePageGraphResponse type satisfies the MappedNullable interface at compile time
 var _ MappedNullable = &KnowledgePageGraphResponse{}
 
-// KnowledgePageGraphResponse Constellation graph of knowledge pages linked by shared tags.
+// KnowledgePageGraphResponse Source memories as nodes, clustered by the page they ground.
 type KnowledgePageGraphResponse struct {
 	Nodes []map[string]interface{} `json:"nodes"`
 	Edges []map[string]interface{} `json:"edges"`
 	TotalPages int32 `json:"total_pages"`
-	TotalEdges int32 `json:"total_edges"`
+	TotalMemories int32 `json:"total_memories"`
 }
 
 type _KnowledgePageGraphResponse KnowledgePageGraphResponse
@@ -33,12 +33,12 @@ type _KnowledgePageGraphResponse KnowledgePageGraphResponse
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewKnowledgePageGraphResponse(nodes []map[string]interface{}, edges []map[string]interface{}, totalPages int32, totalEdges int32) *KnowledgePageGraphResponse {
+func NewKnowledgePageGraphResponse(nodes []map[string]interface{}, edges []map[string]interface{}, totalPages int32, totalMemories int32) *KnowledgePageGraphResponse {
 	this := KnowledgePageGraphResponse{}
 	this.Nodes = nodes
 	this.Edges = edges
 	this.TotalPages = totalPages
-	this.TotalEdges = totalEdges
+	this.TotalMemories = totalMemories
 	return &this
 }
 
@@ -122,28 +122,28 @@ func (o *KnowledgePageGraphResponse) SetTotalPages(v int32) {
 	o.TotalPages = v
 }
 
-// GetTotalEdges returns the TotalEdges field value
-func (o *KnowledgePageGraphResponse) GetTotalEdges() int32 {
+// GetTotalMemories returns the TotalMemories field value
+func (o *KnowledgePageGraphResponse) GetTotalMemories() int32 {
 	if o == nil {
 		var ret int32
 		return ret
 	}
 
-	return o.TotalEdges
+	return o.TotalMemories
 }
 
-// GetTotalEdgesOk returns a tuple with the TotalEdges field value
+// GetTotalMemoriesOk returns a tuple with the TotalMemories field value
 // and a boolean to check if the value has been set.
-func (o *KnowledgePageGraphResponse) GetTotalEdgesOk() (*int32, bool) {
+func (o *KnowledgePageGraphResponse) GetTotalMemoriesOk() (*int32, bool) {
 	if o == nil {
 		return nil, false
 	}
-	return &o.TotalEdges, true
+	return &o.TotalMemories, true
 }
 
-// SetTotalEdges sets field value
-func (o *KnowledgePageGraphResponse) SetTotalEdges(v int32) {
-	o.TotalEdges = v
+// SetTotalMemories sets field value
+func (o *KnowledgePageGraphResponse) SetTotalMemories(v int32) {
+	o.TotalMemories = v
 }
 
 func (o KnowledgePageGraphResponse) MarshalJSON() ([]byte, error) {
@@ -159,7 +159,7 @@ func (o KnowledgePageGraphResponse) ToMap() (map[string]interface{}, error) {
 	toSerialize["nodes"] = o.Nodes
 	toSerialize["edges"] = o.Edges
 	toSerialize["total_pages"] = o.TotalPages
-	toSerialize["total_edges"] = o.TotalEdges
+	toSerialize["total_memories"] = o.TotalMemories
 	return toSerialize, nil
 }
 
@@ -171,7 +171,7 @@ func (o *KnowledgePageGraphResponse) UnmarshalJSON(data []byte) (err error) {
 		"nodes",
 		"edges",
 		"total_pages",
-		"total_edges",
+		"total_memories",
 	}
 
 	allProperties := make(map[string]interface{})
