# hindsight-clients/python/hindsight_client_api/models/knowledge_node.py
@@ -5,7 +5,7 @@
 
     HTTP API for Hindsight
 
-    The version of the OpenAPI document: 0.8.3
+    The version of the OpenAPI document: 0.8.4
     Generated by OpenAPI Generator (https://openapi-generator.tech)
 
     Do not edit the class manually.
@@ -35,8 +35,9 @@ class KnowledgeNode(BaseModel):
     description: Optional[StrictStr] = None
     tags: Optional[List[StrictStr]] = None
     timestamp: Optional[StrictStr] = None
+    is_stale: Optional[StrictBool] = None
     children: Optional[List[KnowledgeNode]] = None
-    __properties: ClassVar[List[str]] = ["id", "kind", "name", "parent_id", "mental_model_id", "managed", "description", "tags", "timestamp", "children"]
+    __properties: ClassVar[List[str]] = ["id", "kind", "name", "parent_id", "mental_model_id", "managed", "description", "tags", "timestamp", "is_stale", "children"]
 
     @field_validator('kind')
     def kind_validate_enum(cls, value):
@@ -111,6 +112,11 @@ class KnowledgeNode(BaseModel):
         if self.timestamp is None and "timestamp" in self.model_fields_set:
             _dict['timestamp'] = None
 
+        # set to None if is_stale (nullable) is None
+        # and model_fields_set contains the field
+        if self.is_stale is None and "is_stale" in self.model_fields_set:
+            _dict['is_stale'] = None
+
         return _dict
 
     @classmethod
@@ -132,6 +138,7 @@ class KnowledgeNode(BaseModel):
             "description": obj.get("description"),
             "tags": obj.get("tags"),
             "timestamp": obj.get("timestamp"),
+            "is_stale": obj.get("is_stale"),
             "children": [KnowledgeNode.from_dict(_item) for _item in obj["children"]] if obj.get("children") is not None else None
         })
         return _obj
